removed display inline block on the body causing responsive issues, also fixed misaligned icons in header

--- a/src/sass/myservice-components.scss
+++ b/src/sass/myservice-components.scss
@@ -24,12 +24,6 @@
   }
 }
 
-@media only screen and (max-width: 420px) {
-  .uikit-body {
-    display: inline-block;
-  }
-}
-
 // Float right for mobile displays
 .floated {
   &.floated--always {
